fix readme, yaml....

--- a/mariadb-ha/mariadb.yaml
+++ b/mariadb-ha/mariadb.yaml
@@ -1,17 +1,29 @@
-namespace: monk-mariadb-master-slave
+namespace: mariadb-cluster
 
-mariadb-common:
+mariadb-base:
+  metadata:
+    defines: metadata
+    name: mariadb
+    description: |
+      MariaDB is a popular open-source relational database management system (RDBMS) that is compatible with MySQL. 
+      It was initially created as a fork of MySQL in 2009 by the original developers of }/mariadb-conf:/etc/mysql/conf.d
+      MariaDB offers many additional features and enhancements over MySQL, including improved performance, scalability, and security. 
+      It also includes several advanced features such as support for dynamic columns, parallel replication, and built-in support for geographic information system (GIS) data.
+    tags: self hosted, database
+    website: https://mariadb.org/
+    source: https://github.com/MariaDB/
+    publisher: monk.io
+    icon: https://www.vectorlogo.zone/logos/mariadb/mariadb-ar21.png
   connections:
     master:
-      runnable: monk-mariadb-master-slave/master
+      runnable: mariadb-cluster/master
       service: mariadb-svc
     slave1:
-      runnable: monk-mariadb-master-slave/slave1
+      runnable: mariadb-cluster/slave1
       service: mariadb-svc
     slave2:
-      runnable: monk-mariadb-master-slave/slave2
+      runnable: mariadb-cluster/slave2
       service: mariadb-svc
-
   variables:
     image_tag:
       type: string
@@ -35,19 +47,18 @@ mariadb-common:
     database_master_host:
       env: MYSQL_MASTER_HOST
       type: string
-      value: <- connection-hostname("master") split(".dns.podman") join("")
+      value: <- connection-hostname("master")
     database_slave1_host:
       env: MYSQL_SLAVE1_HOST
       type: string
-      value: <- connection-hostname("slave1") split(".dns.podman") join("")
+      value: <- connection-hostname("slave1")
     mariadb-slave2-host:
       env: MYSQL_SLAVE2_HOST
       type: string
-      value: <- connection-hostname("slave2") split(".dns.podman") join("")
+      value: <- connection-hostname("slave2")
     volume_data:
       type: string
       value: <- `${monk-volume-path}`
-
   services:
     mariadb-svc:
       port: 3306
@@ -56,13 +67,13 @@ mariadb-common:
 
 master:
   defines: runnable
-  inherits: monk-mariadb-master-slave/mariadb-common
-
+  inherits: mariadb-cluster/mariadb-base
+  metadata:
+    private: true
   variables:
     mariadb_port:
       type: int
       value: <- $mariadb_master_database_port
-
   containers:
     mariadb:
       paths:
@@ -71,7 +82,6 @@ master:
         - <- `${mariadb_port}:3306`
       image-tag: <- `${image_tag}`
       image: mariadb
-
   files:
     my-file:
       raw: true
@@ -92,16 +102,16 @@ master:
 
 slave1:
   defines: runnable
-  inherits: monk-mariadb-master-slave/mariadb-common
-
+  inherits: mariadb-cluster/mariadb-base
+  metadata:
+    private: true
   variables:
     mariadb_port:
       type: int
       value: <- $mariadb_slave1_database_port
     slave1-volume_data:
-        type: string
-        value: <- $mariadb_database_data_volume_path
-
+      type: string
+      value: <- $mariadb_database_data_volume_path
   containers:
     mariadb:
       ports:
@@ -110,7 +120,6 @@ slave1:
       paths:
         - <- `${slave1-volume_data}/mariadb-slave1:/var/lib/mysql`
       image: mariadb
-
   files:
     my-file:
       raw: true
@@ -133,16 +142,16 @@ slave1:
 
 slave2:
   defines: runnable
-  inherits: monk-mariadb-master-slave/mariadb-common
-
+  inherits: mariadb-cluster/mariadb-base
+  metadata:
+    private: true
   variables:
     mariadb_port:
       type: int
       value: <- $mariadb_slave2_database_port
     slave2-volume_data:
-        type: string
-        value: <- $mariadb_database_data_volume_path
-
+      type: string
+      value: <- $mariadb_database_data_volume_path
   containers:
     mariadb:
       ports:
@@ -151,7 +160,6 @@ slave2:
       paths:
         - <- `${slave2-volume_data}/mariadb-slave2:/var/lib/mysql`
       image: mariadb
-
   files:
     my-file:
       raw: true
@@ -174,8 +182,9 @@ slave2:
 
 configure:
   defines: runnable
-  inherits: monk-mariadb-master-slave/mariadb-common
-
+  inherits: mariadb-cluster/mariadb-base
+  metadata:
+    private: true
   variables:
     mariadb_master_password:
       env: MYSQL_MASTER_PASSWORD
@@ -197,13 +206,11 @@ configure:
       env: MYSQL_MONITOR_USER
       value: <- $mariadb_database_monitor_user
       type: string
-
   containers:
     mariadb:
       bash: /tmp/init.sh
       image-tag: <- `${image_tag}`
       image: mariadb
-
   files:
     my-file:
       raw: true
@@ -213,42 +220,32 @@ configure:
         while ! mysqladmin ping -u root -h $MYSQL_MASTER_HOST -p$MYSQL_ROOT_PASSWORD -h $MYSQL_MASTER_HOST --silent; do
           sleep 1
         done
-
         mysql -u root -h $MYSQL_MASTER_HOST -p$MYSQL_ROOT_PASSWORD  -e "RESET MASTER;"
         mysql -u root -h $MYSQL_MASTER_HOST -p$MYSQL_ROOT_PASSWORD  -e "FLUSH TABLES WITH READ LOCK;"
-
         mysql -u root -p$MYSQL_ROOT_PASSWORD -h $MYSQL_MASTER_HOST -e "UNLOCK TABLES;"
         mysql -u root -p$MYSQL_ROOT_PASSWORD -h $MYSQL_MASTER_HOST -e "ALTER USER 'root'@'%' IDENTIFIED WITH mysql_native_password BY '$MYSQL_ROOT_PASSWORD';"
         mysql -u root -p$MYSQL_ROOT_PASSWORD -h $MYSQL_MASTER_HOST -e "CREATE USER '$MYSQL_MONITOR_USER'@'%' IDENTIFIED BY '$MYSQL_MONITOR_PASSWORD';"
         mysql -u root -p$MYSQL_ROOT_PASSWORD -h $MYSQL_MASTER_HOST -e "FLUSH PRIVILEGES;"
-
         mysqldump -uroot -h $MYSQL_MASTER_HOST  -p$MYSQL_ROOT_PASSWORD --all-databases --source-data --single-transaction --flush-logs --events --result-file=/tmp/master_dump.sql
-
         mysql -h $MYSQL_SLAVE1_HOST -u root -p$MYSQL_ROOT_PASSWORD -e "STOP SLAVE;";
         mysql -h $MYSQL_SLAVE1_HOST -u root -p$MYSQL_ROOT_PASSWORD < /tmp/master_dump.sql
-
         mysql -h $MYSQL_SLAVE2_HOST -u root -p$MYSQL_ROOT_PASSWORD -e "STOP SLAVE;";
         mysql -h $MYSQL_SLAVE2_HOST -u root -p$MYSQL_ROOT_PASSWORD < /tmp/master_dump.sql
-
         log_file=`mysql -u root -p$MYSQL_ROOT_PASSWORD -h $MYSQL_MASTER_HOST -e "SHOW MASTER STATUS\G" | grep File: | awk '{print $2}'`
         pos=`mysql -u root -p$MYSQL_ROOT_PASSWORD -h $MYSQL_MASTER_HOST -e "SHOW MASTER STATUS\G" | grep Position: | awk '{print $2}'`
-
         mysql -u root -p$MYSQL_ROOT_PASSWORD -h $MYSQL_SLAVE1_HOST -e "RESET SLAVE";
         mysql -u root -p$MYSQL_ROOT_PASSWORD -h $MYSQL_SLAVE1_HOST -e "CHANGE MASTER TO MASTER_HOST='$MYSQL_MASTER_HOST', MASTER_USER='root', MASTER_PASSWORD='$MYSQL_ROOT_PASSWORD', MASTER_LOG_FILE='${log_file}', MASTER_LOG_POS=${pos};"
         mysql -u root -p$MYSQL_ROOT_PASSWORD -h $MYSQL_SLAVE1_HOST -e "start slave"
-
         mysql -u root -p$MYSQL_ROOT_PASSWORD -h $MYSQL_SLAVE2_HOST -e "RESET SLAVE";
         mysql -u root -p$MYSQL_ROOT_PASSWORD -h $MYSQL_SLAVE2_HOST -e "CHANGE MASTER TO MASTER_HOST='$MYSQL_MASTER_HOST', MASTER_USER='root', MASTER_PASSWORD='$MYSQL_ROOT_PASSWORD', MASTER_LOG_FILE='${log_file}', MASTER_LOG_POS=${pos};"
         mysql -u root -p$MYSQL_ROOT_PASSWORD -h $MYSQL_SLAVE2_HOST -e "start slave"
-
       container: mariadb
       path: /tmp/init.sh
       mode: 755
-
   depends:
     wait-for:
-        runnables:
-            - monk-mariadb-master-slave/master
-            - monk-mariadb-master-slave/slave1
-            - monk-mariadb-master-slave/slave2
-        timeout: 60
+      runnables:
+        - mariadb-cluster/master
+        - mariadb-cluster/slave1
+        - mariadb-cluster/slave2
+      timeout: 60
