--- a/mariadb-ha/stack.yaml
+++ b/mariadb-ha/stack.yaml
@@ -1,48 +1,40 @@
-namespace: monk-mariadb-master-slave
+namespace: mariadb-cluster
 
 stack:
   defines: process-group
   runnable-list:
-    - monk-mariadb-master-slave/master
-    - monk-mariadb-master-slave/slave1
-    - monk-mariadb-master-slave/slave2
-    - monk-mariadb-master-slave/configure
-  metadata:
-    defines: metadata
-    name: mariadb
-    description: MariaDB Galera is a multi-primary database cluster solution for synchronous replication and high availability.
-    tags: self hosted, database
-    website: https://mariadb.org/
-    source: https://github.com/MariaDB/
-    publisher: "monk.io"
+    - mariadb-cluster/master
+    - mariadb-cluster/slave1
+    - mariadb-cluster/slave2
+    - mariadb-cluster/configure
   variables:
     mariadb_database_repl_user:
-      value: "repl"
+      value: repl
       type: string
     mariadb_database_repl_password:
-      value: "RhgDPXPEnAgJ5q5g"
+      value: RhgDPXPEnAgJ5q5g
       type: string
     mariadb_database_monitor_user:
-      value: "monitor"
+      value: monitor
       type: string
     mariadb_database_monitor_password:
-      value: "RhgDPXPEnAgJ5q5g"
+      value: RhgDPXPEnAgJ5q5g
       type: string
     mariadb_database_user:
-      value: "db_user"
+      value: db_user
       type: string
     mariadb_database_root_password:
-      value: "RhgDPXPEnAgJ5q5g"
+      value: RhgDPXPEnAgJ5q5g
       type: string
     mariadb_database_name:
-      value: "monk"
+      value: monk
       type: string
     mariadb_master_database_port: 3306
     mariadb_slave1_database_port: 3307
     mariadb_slave2_database_port: 3308
-    mariadb_database_password: "RhgDPXPEnAgxxXYZ"
+    mariadb_database_password: RhgDPXPEnAgxxXYZ
     mariadb_image_tag:
-      value: "10.10"
+      value: '10.10'
       type: string
     mariadb_database_data_volume_path:
       value: <- `${moncc-volume-path}/mariadb`
