Fix description for cluster

--- a/mariadb-ha/mariadb.yaml
+++ b/mariadb-ha/mariadb.yaml
@@ -3,6 +3,17 @@ namespace: mariadb-cluster
 
 mariadb-common:
   metadata:
+    name: mariadb
+    description: |
+      MariaDB is a popular open-source relational database management system (RDBMS) that is compatible with MySQL.
+      It was initially created as a fork of MySQL in 2009 by the original developers of }/mariadb-conf:/etc/mysql/conf.d
+      MariaDB offers many additional features and enhancements over MySQL, including improved performance, scalability, and security.
+      It also includes several advanced features such as support for dynamic columns, parallel replication, and built-in support for geographic information system (GIS) data.
+    tags: stored procedures and triggers, self hosted, query optimization, mysql alternative, database, replication and clustering
+    website: https://mariadb.org/
+    source: https://github.com/MariaDB/
+    publisher: monk.io
+    icon: https://www.vectorlogo.zone/logos/mariadb/mariadb-ar21.png
     private: true
   services:
     mariadb-svc:
@@ -43,8 +54,6 @@ mariadb-common:
 master:
   defines: runnable
   inherits: mariadb-cluster/mariadb-common
-  metadata:
-    private: true
   containers:
     mariadb:
       paths:
@@ -72,8 +81,6 @@ master:
 slave1:
   defines: runnable
   inherits: mariadb-cluster/mariadb-common
-  metadata:
-    private: true
   containers:
     mariadb:
       image-tag: <- `${image_tag}`
@@ -103,8 +110,6 @@ slave1:
 slave2:
   defines: runnable
   inherits: mariadb-cluster/mariadb-common
-  metadata:
-    private: true
   containers:
     mariadb:
       image-tag: <- `${image_tag}`
@@ -134,8 +139,6 @@ slave2:
 configure:
   defines: runnable
   inherits: mariadb-cluster/mariadb-common
-  metadata:
-    private: true
   variables:
     mariadb_master_password:
       env: MYSQL_MASTER_PASSWORD
