--- a/mariadb-ha/mariadb.yaml
+++ b/mariadb-ha/mariadb.yaml
@@ -49,7 +49,7 @@ master:
     mariadb:
       paths:
         - <- `${monk-volume-path}/mariadb-master:/var/lib/mysql`
-      image-tag: <- `${image_tag}`
+      image-tag: <- $image_tag
       image: mariadb
   files:
     my-file:
@@ -76,7 +76,7 @@ slave1:
     private: true
   containers:
     mariadb:
-      image-tag: <- `${image_tag}`
+      image-tag: <- $image_tag
       paths:
         - <- `${monk-volume-path}/mariadb-slave1:/var/lib/mysql`
       image: mariadb
@@ -107,7 +107,7 @@ slave2:
     private: true
   containers:
     mariadb:
-      image-tag: <- `${image_tag}`
+      image-tag: <- $image_tag
       paths:
         - <- `${monk-volume-path}/mariadb-slave2:/var/lib/mysql`
       image: mariadb
@@ -172,7 +172,7 @@ configure:
   containers:
     mariadb:
       bash: /tmp/init.sh
-      image-tag: <- `${image_tag}`
+      image-tag: <- $image_tag
       image: mariadb
   files:
     my-file:
