--- a/mariadb/mariadb.yaml
+++ b/mariadb/mariadb.yaml
@@ -27,6 +27,65 @@ mariadb-common:
       paths:
         - <- `${monk-volume-path}/mariadb:/var/lib/mysql/`
         - <- `${monk-volume-path}/mariadb-conf:/etc/mysql/conf.d`
+      bash: |
+        # Start password updater in background
+        nohup sh -c '
+          # Wait for MariaDB real server to be ready (6 minutes max)
+          attempt=0
+          while [ $attempt -lt 180 ]; do
+            if /usr/bin/mariadb -h localhost -P 3306 -u root -p"$MYSQL_ROOT_PASSWORD" -e "SELECT 1;" >/dev/null 2>&1; then
+              echo "$(date) MariaDB ready, updating passwords..."
+              /tmp/update-passwords.sh
+              exit 0
+            fi
+            attempt=$((attempt + 1))
+            sleep 2
+          done
+          echo "$(date) Timeout waiting for MariaDB after 6 minutes"
+        ' &
+        
+        # Run official entrypoint
+        exec /usr/local/bin/docker-entrypoint.sh mariadbd
+  files:
+    password-updater:
+      raw: true
+      contents: |
+        #!/bin/bash
+        set -e
+        
+        # Skip if no root password set
+        [ -z "$MYSQL_ROOT_PASSWORD" ] && exit 0
+        
+        # Update root password
+        /usr/bin/mariadb -h localhost -P 3306 -u root -p"${MYSQL_ROOT_PASSWORD}" <<-EOSQL
+          ALTER USER 'root'@'localhost' IDENTIFIED BY '${MYSQL_ROOT_PASSWORD}';
+          ALTER USER 'root'@'%' IDENTIFIED BY '${MYSQL_ROOT_PASSWORD}';
+          FLUSH PRIVILEGES;
+        EOSQL
+        
+        # Handle user creation/update
+        if [ -n "$MYSQL_USER" ] && [ -n "$MYSQL_PASSWORD" ]; then
+          /usr/bin/mariadb -h localhost -P 3306 -u root -p"${MYSQL_ROOT_PASSWORD}" <<-EOSQL
+            CREATE USER IF NOT EXISTS '${MYSQL_USER}'@'localhost' IDENTIFIED BY '${MYSQL_PASSWORD}';
+            CREATE USER IF NOT EXISTS '${MYSQL_USER}'@'%' IDENTIFIED BY '${MYSQL_PASSWORD}';
+            ALTER USER '${MYSQL_USER}'@'localhost' IDENTIFIED BY '${MYSQL_PASSWORD}';
+            ALTER USER '${MYSQL_USER}'@'%' IDENTIFIED BY '${MYSQL_PASSWORD}';
+        EOSQL
+          
+          # Grant database privileges if specified
+          if [ -n "$MYSQL_DATABASE" ]; then
+            /usr/bin/mariadb -h localhost -P 3306 -u root -p"${MYSQL_ROOT_PASSWORD}" <<-EOSQL
+              GRANT ALL ON \`${MYSQL_DATABASE//_/\\_}\`.* TO '${MYSQL_USER}'@'localhost';
+              GRANT ALL ON \`${MYSQL_DATABASE//_/\\_}\`.* TO '${MYSQL_USER}'@'%';
+              FLUSH PRIVILEGES;
+        EOSQL
+          fi
+        fi
+        
+        echo "$(date) Password update completed!"
+      container: mariadb
+      path: /tmp/update-passwords.sh
+      mode: 0755
   variables:
     mariadb-image:
       value: <- $mariadb-image-tag default("10.10")
